--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -207,3 +207,189 @@ ul.horizontal li {
   text-align: center;
   background-color: lighten(#0e6d82, 60);
 }
+
+/*  User Upload Styles  */
+
+.outer-container {
+  position: relative;
+  display: block;
+  width: 96%;
+  height: 100px;
+  -webkit-box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
+  box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
+  padding: 10px;
+  color: rgb(135, 152, 170);
+  bottom:100px;
+  left:0;
+}
+
+.file-preview {
+  display: inline-block;
+  width: 80px;
+  height: 80px;
+  background: rgb(61, 68, 80);
+  float:left;
+}
+
+
+.middle-section {
+  float:left;
+}
+
+
+.file-title {
+  display: inline-block;
+  margin-left: 10px;
+  float:left;
+  font-size: 25px;
+  max-height: 30px;
+
+  line-height: 1em;
+}
+
+.file-title .file-name {
+  color: white;
+}
+
+.file-title .file-extension {
+  color: #6C6E83;
+}
+
+.file-info {
+  margin-top: 7px;
+  margin-bottom: 5px;
+}
+
+.file-info .file-info-bit {
+  float: left;
+  //         min-width: 130px;
+  margin-right: 30px;
+}
+
+.fa-circle {
+  margin-right: 3px;
+  font-size: 10px;
+}
+
+.pw-icon {
+  margin-right: 5px;
+}
+
+/*
+.file-size {
+    margin-left: 10px;
+    margin-top: 65px;
+    font-size: 12px;
+}
+*/
+
+.delete {
+  float:right;
+  height: 98px;
+  width: 30px;
+  margin-top: -9px;
+  margin-right:-9px;
+  background: rgb(64, 71, 86);
+  color: rgb(95, 105, 119);
+  transition: .3s ease-out;
+}
+.delete:hover {
+  background: #333e4d;
+}
+.delete:hover i{
+  color: #f9974f;
+}
+
+.delete i {
+  margin-top: 46px;
+  margin-left: 8px;
+  transition: .3s ease-out;
+}
+
+
+.copy {
+  float: right;
+  width: 100px;
+  height: 98px;
+  margin-top: -9px;
+}
+
+.copy p {
+  color: white;
+  margin-top: 41px;
+  margin-left: 30px;
+}
+
+.progress-background {
+  display: block;
+  height: 100px;
+  width: 96%;
+  backface-visibility: hidden;
+  //     background-color: rgba(71, 81, 97, .9);
+}
+
+.progress {
+  background-color: rgba(71, 81, 97, 0.90);
+  height: 100%;
+}
+
+.progress-bar {
+  background-color: rgba(67, 76, 92, .9);
+}
+
+.flip {
+  width: 96%;
+  height: 100px;
+  position: relative;
+  perspective: 800px;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform .3s;
+}
+
+.card .face {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card .back.face {
+  transform: rotateX( 180deg );
+}
+
+.card.flipped {
+  transform: rotateX( 180deg );
+}
+
+.password-enter {
+  width: 96% !important;
+  height: 100px;
+  background-color: rgba(67, 76, 92, .9);
+  -webkit-box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
+  box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
+}
+
+.password-enter input {
+  float: left;
+  background-color: rgba(67, 76, 92, .9);
+  border: none;
+  height: 98px;
+  width: 90%;
+  color: #8ba8ce; /* color after you fill it in */
+  padding: 15px 15px 15px 100px;
+  font-size: 3.05em;
+  transition: .3s;
+  margin-top: 1px;
+  margin-left: 1px;
+}
+
+.password-enter button {
+  float: right;
+}
