I Dont think I changed this but it said I did!

--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -483,3 +483,23 @@ ul.horizontal li {
 
 		
 	}
+
+
+
+@media (max-width:320px){
+
+	.file-title {
+	font-size: 1.1em;
+	}
+	.file-preview {
+	display: none;
+	}
+	
+	.middle-section.col-sm-8 {
+	width: 100%;
+	padding-right: 0px;
+	}	
+	
+
+
+}
