copy 'test' to clipboard when clicked using ng-clip

--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -48,7 +48,7 @@
                     </div>
 
                     <div class="copy">
-                        <p>copy</p>
+                        <a hreg="" clip-click-fallback="fallback(copy)" clip-copy="downloadPageUrl" clip-click="doSomething()">copy</a>
                     </div>
                 </div>
             </div>
