--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -6,7 +6,7 @@
   border: 0px;
   margin-bottom: 0px;
 }
-
+ 
 .navbar-brand {
   padding: 0px;
 }
@@ -213,7 +213,7 @@ ul.horizontal li {
 .outer-container {
   position: relative;
   display: block;
-  width: 96%;
+  width: 100%;
   height: 100px;
   -webkit-box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
   box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
@@ -260,10 +260,11 @@ ul.horizontal li {
 
 .file-title {
   display: inline-block;
+  margin-left: 0px;
+  padding-left: 0px;
   float:left;
   font-size: 25px;
   max-height: 30px;
-
   line-height: 1em;
 }
 
@@ -343,7 +344,7 @@ ul.horizontal li {
 .progress-background {
   display: block;
   height: 100px;
-  width: 96%;
+  width: 100%;
   backface-visibility: hidden;
   //     background-color: rgba(71, 81, 97, .9);
 }
@@ -358,7 +359,7 @@ ul.horizontal li {
 }
 
 .flip {
-  width: 96%;
+  width: 100%;
   height: 100px;
   position: relative;
   perspective: 800px;
@@ -389,7 +390,7 @@ ul.horizontal li {
 }
 
 .password-enter {
-  width: 96% !important;
+  width: 100% !important;
   height: 100px;
   background-color: rgba(67, 76, 92, .9);
   -webkit-box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
@@ -500,14 +501,18 @@ ul.horizontal li {
 }
 
 
+@media (max-width:500px){
+	.file-preview {
+	display: none;
+	}
+
+}
+
 
 @media (max-width:320px){
 
 	.file-title {
 	font-size: 1.1em;
-	}
-	.file-preview {
-	display: none;
 	}
 	
 	.middle-section.col-sm-8 {
