adding file image with extension

--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -7,7 +7,10 @@
             </div>
 
             <div class="outer-container">
-                <div class="file-preview"></div>
+                <div class="file-preview">
+                    <img src="assets/images/file.png">
+                    <span class="file-type">{{file.extension}}</span>
+                </div>
 
                 <div class="middle-section col-sm-8">
                     <div class="row col-sm-12 file-title">
