--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -224,6 +224,7 @@ ul.horizontal li {
 }
 
 .file-preview {
+  position: relative;
   display: inline-block;
   width: 80px;
   height: 80px;
@@ -231,6 +232,26 @@ ul.horizontal li {
   float:left;
 }
 
+.file-preview img {
+  position: absolute;
+  height: 60px;
+  left: 17px;
+  top: 10px;
+}
+
+.file-preview .file-type {
+  position: absolute;
+  background-color: rgba(220, 220, 220, .8);
+  height: 20px;
+  width: 46px;
+  bottom: 10px;
+  left: 17px;
+  font-size: 15px;
+  color: rgb(85, 85, 85);
+  padding-left: 5px;
+  padding-bottom: 2px;
+  font-weight: bold;
+}
 
 .middle-section {
   float:left;
@@ -393,8 +414,6 @@ ul.horizontal li {
   float: right;
 }
 
-
-
 @media (max-width:600px){
 	
 	.container {
@@ -478,10 +497,7 @@ ul.horizontal li {
 	margin-top: 7px;
 	margin-bottom: 1px;
 	}
-	
-
-		
-	}
+}
 
 
 
@@ -497,8 +513,5 @@ ul.horizontal li {
 	.middle-section.col-sm-8 {
 	width: 100%;
 	padding-right: 0px;
-	}	
-	
-
-
+	}
 }
