--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -232,7 +232,7 @@ ul.horizontal li {
   float:left;
 }
 
-.file-preview img {
+.file-preview .placeholder-file {
   position: absolute;
   height: 60px;
   left: 17px;
@@ -251,6 +251,11 @@ ul.horizontal li {
   padding-left: 5px;
   padding-bottom: 2px;
   font-weight: bold;
+}
+
+.file-preview .image-preview {
+  height: 100%;
+  width: auto;
 }
 
 .middle-section {
