Login, Home Page tweaks

--- a/src/app/login/login.tpl.html
+++ b/src/app/login/login.tpl.html
@@ -21,6 +21,10 @@
                 <!--<span class="help-block">Required</span>-->
             </div>
         </div>
+        
+        <div class="login_error">
+	        <span>Your username or password is incorrect.</span>
+        </div>
 
         <div class="form-actions">
             <button type="submit" class="btn btn-primary special_b">SIGN IN</button>
