--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -426,8 +426,6 @@ float: right;
 height: 100%;
 }
 
-<<<<<<< HEAD
-=======
 .password-enter button {
 float: left;
 background: #333E4D;
@@ -449,7 +447,7 @@ background: #333e4d;
 
 
 
->>>>>>> Sign up and Password Section
+// Sign up and Password Section
 @media (max-width:600px){
 	
 	.container {
