--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -262,6 +262,9 @@ ul.horizontal li {
   float:left;
 }
 
+.outer-container.active {
+  box-shadow: 0px 2px red;
+}
 
 .file-title {
   display: inline-block;
@@ -290,6 +293,17 @@ ul.horizontal li {
   float: left;
   //         min-width: 130px;
   margin-right: 30px;
+}
+
+.image-preview {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.selected-row {
+  border-bottom: 2px red solid;
 }
 
 .fa-circle {
