--- a/src/app/dashboard/dashboard.tpl.html
+++ b/src/app/dashboard/dashboard.tpl.html
@@ -12,9 +12,11 @@
             <ul class="nav navbar-nav">
                 <a class="navbar-brand pull-left" href="#"><img src="assets/images/logo.png" class="logo"></a>
 
+<!--
                 <li class="active"><a href="#"><i class="fa fa-bars fa-lg"></i></a></li>
                 <li><a href="#"><i class="fa fa-th-large fa-lg"></i></a></li>
                 <li class="sort-active"><a href="#">Date</a></li>
+-->
                 <!--
                                 <li><a href="#">Downloads</a></li>
                                 <li><a href="#">Expiring</a></li>
@@ -40,14 +42,44 @@
 
 <div class="container">
 
-    <div id="files-information">
+	<div class="top_dash row">
+	    <div id="files-information" class="col-xs-4">
+	        <ul class="horizontal">
+	            <li>
+	                <ng-pluralize class="file-tidbit"
+	                              count="userFileInfo.numTotalUploads"
+	                              when="{'0':'No files',
+	                                     '1':'1 file',
+	                                     'other':'{} files'}">
+	                </ng-pluralize>
+	            </li>
+	            <li><span class="file-tidbit">{{userFileInfo.totalSizeUploaded | bytes}}</span></li>
+	            <li><span class="file-tidbit">{{userFileInfo.numDownloads}} delivered</span></li>
+	        </ul>
+	    </div>
+		
+        <div class="center-subheader col-xs-8">
+	        <input type="file" class="custom-file-input" ng-file-select="onFileSelect($files)">
+			<!-- <input class="upload-button" type="file" ng-file-select="onFileSelect($files)"> -->
+            <span> or Drag files in to upload</span>
+        </div>
+
+		
+		
+	</div>
+
+	
+<!--
         <div class="center-wrapper">
             <div class="center-subheader">
                 <input class="upload-button" type="file" ng-file-select="onFileSelect($files)">
                 <span> or Drag files in to upload</span>
             </div>
         </div>
+-->
 
+<!--
+    <div id="files-information">
         <ul class="horizontal">
             <li>
                 <ng-pluralize class="file-tidbit"
@@ -61,6 +93,7 @@
             <li><span class="file-tidbit">{{userFileInfo.numDownloads}} delivered</span></li>
         </ul>
     </div>
+-->
 
     <div class="files-section">
         <div class="file-in-files" ng-repeat="i in files">
