--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -50,10 +50,11 @@
                     <div class="delete">
                         <i class="fa fa-trash fa-lg"></i>
                     </div>
-
-                    <div class="copy">
-                        <a hreg="" clip-click-fallback="fallback(copy)" clip-copy="downloadPageUrl" clip-click="doSomething()">copy</a>
-                    </div>
+					<a href="" clip-click-fallback="fallback(copy)" clip-copy="downloadPageUrl" clip-click="doSomething()">
+                    	<div class="copy">
+                        	copy
+                    	</div>
+                    </a>
                 </div>
             </div>
         </div>
