Responsive Fixes to the Dashboard.. Test it out!

--- a/src/app/dashboard/userUpload/userUpload.tpl.html
+++ b/src/app/dashboard/userUpload/userUpload.tpl.html
@@ -13,7 +13,8 @@
                     <div class="image-preview" ng-show="imageType" ng-style="{'background-image':'url({{file.fullUrl}})'}"></div>
                 </div>
 
-                <div class="middle-section col-sm-8">
+<!--                 <div class="middle-sectioncol-sm-8"> -->
+                <div class="middle-section">
                     <div class="row col-sm-12 file-title">
                         <span class="file-name">{{file.name}}</span><span class="file-extension">.{{file.extension}}</span>
                     </div>
